@@ -5,6 +5,7 @@ public enum TokenType {
 
     // Single-character tokens.
     LEFT_PAREN, RIGHT_PAREN, LEFT_BRACE, RIGHT_BRACE,
+    LEFT_BRACKET, RIGHT_BRACKET,
     COMMA, DOT,
 
     // One or two character tokens.
@@ -22,8 +23,7 @@ public enum TokenType {
     IDENTIFIER, STRING, INTEGER, DECIMAL,
 
     // Keywords.
-    AND, CLASS, ELSE, FALSE, FUN, FOR, IF, NIL, OR,
-    PRINT, RETURN, SUPER, THIS, TRUE, VAR, WHILE,
+    RESERVED_WORD,
 
     EOF
 }
